--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sbb.sergobanjobanking">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.sbb.sergobanjobanking.database.DatabaseApp"
+        android:name=".database.DatabaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SergoBanjoBanking">
-        <activity android:name=".RegistrationActivity"></activity>
+        <activity
+            android:name=".BuyStockActivity"
+            android:parentActivityName=".HomeActivity" />
+        <activity
+            android:name=".RegistrationActivity"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home" />
